# ImageProcessingApp

./: CMakeLists.txt
sources/Core/: CMakeLists.txt
sources/Core/include/Core/: Core.hpp  OpConfigDefines.hpp
sources/Core/src/: Core.cpp
sources/Core/test/: test.cpp
sources/Gui/: CMakeLists.txt
sources/Gui/include/Gui/: ImageDisplayWidget.hpp  MainControl.hpp  MainGui.hpp  MainWidget.hpp  OpConfigWidgets.hpp  OpListWidget.hpp
sources/Gui/src/: ImageDisplayWidget.cpp  MainControl.cpp  MainGui.cpp  MainWidget.cpp  OpConfigWidgets.cpp  OpListWidget.cpp
sources/Gui/test/: test.cpp
